# stg_c

./: study_win32.sln
study_win32/: Resource.h  study_win32.c  study_win32.cpp  study_win32.rc  study_win32.vcxproj  study_win32.vcxproj.filters
win32_c/study_win32/: study_win32.c
win32_rust/: Cargo.toml
win32_rust/src/: main.rs
